@@ -27,7 +27,7 @@ public interface CoresLocator {
    * @param cc the CoreContainer
    * @param coreDescriptors CoreDescriptors to persist
    */
-  public void create(CoreContainer cc, CoreDescriptor... coreDescriptors);
+  void create(CoreContainer cc, CoreDescriptor... coreDescriptors);
 
   /**
    * Ensure that the core definitions from the passed in CoreDescriptors will persist across
@@ -36,7 +36,7 @@ public interface CoresLocator {
    * @param cc the CoreContainer
    * @param coreDescriptors CoreDescriptors to persist
    */
-  public void persist(CoreContainer cc, CoreDescriptor... coreDescriptors);
+  void persist(CoreContainer cc, CoreDescriptor... coreDescriptors);
 
   /**
    * Ensure that the core definitions from the passed in CoreDescriptors are not available for
@@ -45,7 +45,7 @@ public interface CoresLocator {
    * @param cc the CoreContainer
    * @param coreDescriptors CoreDescriptors of the cores to remove
    */
-  public void delete(CoreContainer cc, CoreDescriptor... coreDescriptors);
+  void delete(CoreContainer cc, CoreDescriptor... coreDescriptors);
 
   /**
    * Persist the new name of a renamed core
@@ -54,7 +54,7 @@ public interface CoresLocator {
    * @param oldCD the CoreDescriptor of the core before renaming
    * @param newCD the CoreDescriptor of the core after renaming
    */
-  public void rename(CoreContainer cc, CoreDescriptor oldCD, CoreDescriptor newCD);
+  void rename(CoreContainer cc, CoreDescriptor oldCD, CoreDescriptor newCD);
 
   /**
    * Swap two core definitions
@@ -63,7 +63,7 @@ public interface CoresLocator {
    * @param cd1 the core descriptor of the first core, after swapping
    * @param cd2 the core descriptor of the second core, after swapping
    */
-  public void swap(CoreContainer cc, CoreDescriptor cd1, CoreDescriptor cd2);
+  void swap(CoreContainer cc, CoreDescriptor cd1, CoreDescriptor cd2);
 
   /**
    * Load all the CoreDescriptors from persistence store
@@ -71,5 +71,31 @@ public interface CoresLocator {
    * @param cc the CoreContainer
    * @return a list of all CoreDescriptors found
    */
-  public List<CoreDescriptor> discover(CoreContainer cc);
+  List<CoreDescriptor> discover(CoreContainer cc);
+
+  /**
+   * Reload a core descriptor.
+   *
+   * @param cd the old core descriptor
+   * @param cc the CoreContainer
+   * @return a new core descriptor
+   */
+  CoreDescriptor reload(CoreDescriptor cd, CoreContainer cc);
+
+  /**
+   * Returns a new instance of {@link CoresLocator}, depending on provided config.
+   *
+   * @param nodeConfig Solr configuration.
+   */
+  static CoresLocator instantiate(NodeConfig nodeConfig) {
+    final String coresLocatorClass = nodeConfig.getCoresLocatorClass();
+    return nodeConfig
+        .getSolrResourceLoader()
+        .newInstance(
+            coresLocatorClass,
+            CoresLocator.class,
+            null,
+            new Class<?>[] {NodeConfig.class},
+            new Object[] {nodeConfig});
+  }
 }
